--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,14 @@
-SUPABASE_PROJECT_REF=YOUR_SUPABASE_PROJECT_REF
-NEXT_PUBLIC_SUPABASE_URL=YOUR_NEXT_PUBLIC_SUPABASE_URL
-NEXT_PUBLIC_SUPABASE_ANON_KEY=YOUR_NEXT_PUBLIC_SUPABASE_ANON_KEY
-STRIPE_SECRET_KEY=YOUR_STRIPE_SECRET_KEY
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=YOUR_NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
-SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
-SUPABASE_JWT_SECRET=YOUR_SUPABASE_JWT_SECRET
-SENDGRID_API_KEY=YOUR_SENDGRID_API_KEY
-STRIPE_WEBHOOK_SECRET=YOUR_STRIPE_WEBHOOK_SECRET
-ADMIN_EMAIL=YOUR_ADMIN_EMAIL
+SUPABASE_PROJECT_REF=SUPABASE_PROJECT_REF
+NEXT_PUBLIC_SUPABASE_URL=NEXT_PUBLIC_SUPABASE_URL
+NEXT_PUBLIC_SUPABASE_ANON_KEY=NEXT_PUBLIC_SUPABASE_ANON_KEY
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
+SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
+SUPABASE_JWT_SECRET=SUPABASE_JWT_SECRET
+AWS_ACCESS_KEY_VALUE=AWS_ACCESS_KEY_VALUE
+AWS_SECRET_KEY_VALUE=AWS_SECRET_KEY_VALUE
+SENDGRID_API_KEY=SENDGRID_API_KEY
+ADMIN_EMAIL=ADMIN_EMAIL
+NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
+STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
+STRIPE_WEBHOOK_SECRET_LIVE=STRIPE_WEBHOOK_SECRET_LIVE
