--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@headlessui/react": "^1.7.7",
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
@@ -54,9 +55,11 @@
     "react-confetti-explosion": "^1.5.1",
     "react-dom": "^18.2.0",
     "react-email": "1.2.0",
+    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-no-ssr": "^1.1.0",
+    "react-select": "^5.7.3",
     "react-tooltip": "^5.4.0",
     "recharts": "^2.5.0",
     "rooks": "^7.14.0",
