--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "shadcn-ui": "^0.1.2",
     "stripe": "^11.3.0",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "url-join": "^5.0.0",
     "zod": "^3.21.4"
   },
