--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "concurrently": "^7.6.0",
     "env-cmd": "^10.1.0",
     "eslint": "^8.31.0",
+    "eslint-config-esnext": "^4.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jsdom": "^20.0.3",
