--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "eslint": "^8.31.0",
     "eslint-config-esnext": "^4.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "jsdom": "^20.0.3",
     "postcss": "^8.4.20",
