--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@hookform/resolvers": "^3.1.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.4",
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
@@ -37,7 +40,9 @@
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.21.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
+    "@types/mdx": "^2.0.5",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "checkbox": "^0.0.1",
@@ -46,11 +51,14 @@
     "crypto-js": "^4.1.1",
     "encoding": "^0.1.13",
     "framer-motion": "^8.0.2",
+    "hast-util-select": "^5.0.5",
+    "hastscript": "^7.2.0",
     "lucide-react": "^0.206.0",
     "moment": "^2.29.4",
-    "next": "^13.4.1",
+    "next": "^13.4.5-canary.4",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
+    "prism-react-renderer": "^2.0.4",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^1.5.1",
@@ -63,6 +71,9 @@
     "react-select": "^5.7.3",
     "react-tooltip": "^5.4.0",
     "recharts": "^2.5.0",
+    "rehype-toc": "^3.0.2",
+    "remark-frontmatter": "^4.0.1",
+    "remark-mdx-frontmatter": "^3.0.0",
     "rooks": "^7.14.0",
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.1.2",
@@ -70,6 +81,7 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5",
+    "unist-util-visit": "^4.1.2",
     "url-join": "^5.0.0",
     "zod": "^3.21.4"
   },
@@ -87,12 +99,14 @@
     "tsc": "tsc"
   },
   "devDependencies": {
+    "@microflash/rehype-slugify": "^1.0.0",
     "@next/eslint-plugin-next": "^13.1.1",
     "@playwright/test": "^1.29.1",
     "@testing-library/react": "^13.4.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.26",
+    "@types/unist": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-react": "^3.0.0",
@@ -106,6 +120,11 @@
     "jsdom": "^20.0.3",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-parse": "^8.0.4",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "remark-toc": "^8.0.1",
     "supabase": "^1.53.0",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^4.9.4",
