--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.46.0",
-    "@supabase/auth-helpers-nextjs": "^0.6.1",
+    "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.21.0",
     "@tailwindcss/typography": "^0.5.9",
@@ -55,7 +55,7 @@
     "hastscript": "^7.2.0",
     "lucide-react": "^0.206.0",
     "moment": "^2.29.4",
-    "next": "^13.4.5-canary.4",
+    "next": "^13.4.5",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "prism-react-renderer": "^2.0.4",
