--- a/package.json
+++ b/package.json
@@ -50,15 +50,18 @@
     "clsx": "^1.2.1",
     "crypto-js": "^4.1.1",
     "encoding": "^0.1.13",
+    "form-data": "^4.0.0",
+    "formidable": "^3.4.0",
     "framer-motion": "^8.0.2",
     "hast-util-select": "^5.0.5",
     "hastscript": "^7.2.0",
     "lucide-react": "^0.206.0",
     "moment": "^2.29.4",
-    "next": "^13.4.6",
+    "next": "^13.4.7-canary.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "prism-react-renderer": "^2.0.4",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^1.5.1",
