--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lucide-react": "^0.206.0",
     "moment": "^2.29.4",
     "next": "^13.4.7-canary.1",
+    "next-mdx-remote": "^4.4.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "prism-react-renderer": "^2.0.4",
