--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@supabase/supabase-js": "^2.21.0",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "@types/mdx": "^2.0.5",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
