--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@types/mdx": "^2.0.5",
+    "@uiw/react-md-editor": "^3.23.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "checkbox": "^0.0.1",
@@ -85,6 +86,7 @@
     "rooks": "^7.14.0",
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.1.2",
+    "slugify": "^1.6.6",
     "stripe": "^11.3.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
