--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "crypto-js": "^4.1.1",
     "encoding": "^0.1.13",
     "form-data": "^4.0.0",
-    "formidable": "^3.4.0",
+    "formidable": "^3.5.0",
     "framer-motion": "^8.0.2",
     "hast-util-select": "^5.0.5",
     "hastscript": "^7.2.0",
     "lucide-react": "^0.206.0",
     "moment": "^2.29.4",
-    "next": "^13.4.7-canary.1",
+    "next": "13.4.9",
     "next-mdx-remote": "^4.4.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
@@ -72,6 +72,7 @@
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^1.5.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-email": "1.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
@@ -93,6 +94,7 @@
     "tailwindcss-animate": "^1.0.5",
     "unist-util-visit": "^4.1.2",
     "url-join": "^5.0.0",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "scripts": {
@@ -113,6 +115,7 @@
     "@next/eslint-plugin-next": "^13.1.1",
     "@playwright/test": "^1.29.1",
     "@testing-library/react": "^13.4.0",
+    "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.26",
