--- a/package.json
+++ b/package.json
@@ -43,11 +43,24 @@
     "@supabase/supabase-js": "^2.21.0",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.4",
+    "@tiptap/core": "^2.0.3",
+    "@tiptap/extension-color": "^2.0.3",
+    "@tiptap/extension-highlight": "^2.0.3",
+    "@tiptap/extension-horizontal-rule": "^2.0.3",
+    "@tiptap/extension-image": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-placeholder": "2.0.3",
+    "@tiptap/extension-task-item": "^2.0.3",
+    "@tiptap/extension-task-list": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
+    "@tiptap/suggestion": "^2.0.3",
     "@types/mdx": "^2.0.5",
-    "@uiw/react-md-editor": "^3.23.3",
+    "@vercel/analytics": "^1.0.1",
+    "ai": "^2.1.20",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "checkbox": "^0.0.1",
@@ -88,12 +101,17 @@
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.1.2",
     "slugify": "^1.6.6",
+    "sonner": "^0.6.2",
     "stripe": "^11.3.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.5",
+    "tippy.js": "^6.3.7",
+    "tiptap-markdown": "^0.8.1",
+    "turndown": "^7.1.2",
     "unist-util-visit": "^4.1.2",
     "url-join": "^5.0.0",
+    "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
