--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@next/bundle-analyzer": "^13.4.10",
     "@next/mdx": "^13.4.4",
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.2",
@@ -34,7 +35,6 @@
     "@react-email/section": "0.0.9",
     "@react-email/tailwind": "0.0.7",
     "@react-email/text": "0.0.5",
-    "@react-icons/all-files": "^4.1.0",
     "@sendgrid/mail": "^7.7.0",
     "@sentry/nextjs": "^7.57.0",
     "@stripe/stripe-js": "^1.46.0",
@@ -89,7 +89,6 @@
     "react-email": "1.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
     "react-no-ssr": "^1.1.0",
     "react-select": "^5.7.3",
     "react-tooltip": "^5.4.0",
