--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@react-email/tailwind": "0.0.7",
     "@react-email/text": "0.0.5",
     "@sendgrid/mail": "^7.7.0",
-    "@sentry/nextjs": "^7.57.0",
+    "@sentry/nextjs": "^7.59.3",
     "@stripe/stripe-js": "^1.46.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.3.1",
@@ -75,7 +75,7 @@
     "hastscript": "^7.2.0",
     "lucide-react": "^0.206.0",
     "moment": "^2.29.4",
-    "next": "13.4.9",
+    "next": "^13.4.10",
     "next-mdx-remote": "^4.4.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
