--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "next-mdx-remote": "^4.4.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
+    "posthog-js": "^1.75.3",
+    "posthog-node": "^3.1.1",
     "prism-react-renderer": "^2.0.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
