--- a/.env.local.example
+++ b/.env.local.example
@@ -12,3 +12,6 @@ ADMIN_EMAIL=ADMIN_EMAIL
 NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
 STRIPE_WEBHOOK_SECRET_LIVE=STRIPE_WEBHOOK_SECRET_LIVE
+NEXT_PUBLIC_POSTHOG_API_KEY=NEXT_PUBLIC_POSTHOG_API_KEY
+NEXT_PUBLIC_POSTHOG_APP_ID=NEXT_PUBLIC_POSTHOG_APP_ID
+NEXT_PUBLIC_POSTHOG_HOST=NEXT_PUBLIC_POSTHOG_HOST
