--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^8.31.0",
     "eslint-config-esnext": "^4.1.0",
+    "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
