--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-email": "1.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-no-ssr": "^1.1.0",
@@ -113,6 +114,7 @@
     "url-join": "^5.0.0",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
+    "web-vitals": "^3.4.0",
     "zod": "^3.21.4"
   },
   "scripts": {
