--- a/.env.local.example
+++ b/.env.local.example
@@ -15,3 +15,5 @@ STRIPE_WEBHOOK_SECRET_LIVE=STRIPE_WEBHOOK_SECRET_LIVE
 NEXT_PUBLIC_POSTHOG_API_KEY=NEXT_PUBLIC_POSTHOG_API_KEY
 NEXT_PUBLIC_POSTHOG_APP_ID=NEXT_PUBLIC_POSTHOG_APP_ID
 NEXT_PUBLIC_POSTHOG_HOST=NEXT_PUBLIC_POSTHOG_HOST
+NEXT_PUBLIC_GA_ID=NEXT_PUBLIC_GA_ID
+RESEND_API_KEY=RESEND_API_KEY
