--- a/package.json
+++ b/package.json
@@ -31,11 +31,9 @@
     "@react-email/img": "0.0.5",
     "@react-email/link": "0.0.5",
     "@react-email/preview": "0.0.6",
-    "@react-email/render": "^0.0.6",
     "@react-email/section": "0.0.9",
     "@react-email/tailwind": "0.0.7",
     "@react-email/text": "0.0.5",
-    "@sendgrid/mail": "^7.7.0",
     "@sentry/nextjs": "^7.59.3",
     "@stripe/stripe-js": "^1.46.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
@@ -99,6 +97,7 @@
     "rehype-toc": "^3.0.2",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^3.0.0",
+    "resend": "^0.17.2",
     "rooks": "^7.14.0",
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.1.2",
