--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -18,3 +18,13 @@ jobs:
       - uses: ./.github/actions/ci-setup
       - name: ts-check && build
         run: yarn run tsc
+
+  vitest:
+    timeout-minutes: 20
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/ci-setup
+      - name: test
+        run: yarn run test
