--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/bundle-analyzer": "^13.4.10",
     "@next/mdx": "^13.4.4",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
