added tremor charts (#29)
* added tremor charts

* fixed eslint errors

* fixing build errors

* removed recharts and added admin panel charts

* fixing error

* moved graphs from OrganizationLists to OrganizationGraphs

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/suggestion": "^2.0.3",
+    "@tremor/react": "^3.6.5",
     "@types/mdx": "^2.0.5",
     "@vercel/analytics": "^1.0.1",
     "ai": "^2.1.20",
@@ -94,7 +95,6 @@
     "react-no-ssr": "^1.1.0",
     "react-select": "^5.7.3",
     "react-tooltip": "^5.4.0",
-    "recharts": "^2.5.0",
     "rehype-toc": "^3.0.2",
     "remark-frontmatter": "^4.0.1",
     "remark-mdx-frontmatter": "^3.0.0",
