--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "moment": "^2.29.4",
     "next": "^13.4.16",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.1",
     "posthog-js": "^1.75.3",
