--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-switch": "^1.0.2",
     "@react-email/button": "0.0.8",
     "@react-email/column": "0.0.7",
+    "@react-email/components": "^0.0.7",
     "@react-email/container": "0.0.8",
     "@react-email/font": "0.0.1",
     "@react-email/head": "^0.0.3",
