add merge rules

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,21 @@
 pull_request_rules:
   - name: Automatic merge on approval
     conditions:
-      - "#approved-reviews-by>=1"
+      - '#approved-reviews-by>=1'
+    actions:
+      merge:
+        method: merge
+  - name: Automatic merge for hotfixes
+    conditions:
+      - label=hotfix
+      - check-success=all
+    actions:
+      merge:
+        method: merge
+  - name: Automatic merge for Renovate PRs
+    conditions:
+      - author=renovate[bot]
+      - check-success=all
     actions:
       merge:
         method: merge
