--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,19 +3,31 @@ pull_request_rules:
     conditions:
       - '#approved-reviews-by>=1'
     actions:
-      merge:
-        method: merge
+      queue:
+        name: default
   - name: Automatic merge for hotfixes
     conditions:
       - label=hotfix
       - check-success=all
     actions:
-      merge:
-        method: merge
+      queue:
+        name: hotfix
   - name: Automatic merge for Renovate PRs
     conditions:
       - author=renovate[bot]
       - check-success=all
     actions:
-      merge:
-        method: merge
+      queue:
+        name: renovate
+queue_rules:
+  - name: default
+    conditions:
+      - check-success=all
+    merge_conditions:
+      - '#approved-reviews-by>=1'
+  - name: hotfix
+    conditions:
+      - check-success=all
+  - name: renovate
+    conditions:
+      - check-success=all
