--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,6 +5,7 @@ pull_request_rules:
     actions:
       queue:
         name: default
+        method: squash
   - name: Automatic merge for hotfixes
     conditions:
       - label=hotfix
@@ -12,6 +13,7 @@ pull_request_rules:
     actions:
       queue:
         name: hotfix
+        method: squash
   - name: Automatic merge for Renovate PRs
     conditions:
       - author=renovate[bot]
