add merge rules

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,6 +2,8 @@ pull_request_rules:
   - name: Automatic merge on approval
     conditions:
       - '#approved-reviews-by>=1'
+      - check-success=build
+      - check-success=test-migrations
     actions:
       queue:
         name: default
@@ -9,7 +11,8 @@ pull_request_rules:
   - name: Automatic merge for hotfixes
     conditions:
       - label=hotfix
-      - check-success=all
+      - check-success=build
+      - check-success=test-migrations
     actions:
       queue:
         name: hotfix
@@ -17,17 +20,23 @@ pull_request_rules:
   - name: Automatic merge for Renovate PRs
     conditions:
       - author=renovate[bot]
-      - check-success=all
+      - check-success=build
+      - check-success=test-migrations
     actions:
       queue:
         name: renovate
+        method: squash
 queue_rules:
   - name: default
     merge_conditions:
+      - check-success=build
+      - check-success=test-migrations
       - '#approved-reviews-by>=1'
   - name: hotfix
-    conditions:
-      - check-success=all
+    merge_conditions:
+      - check-success=build
+      - check-success=test-migrations
   - name: renovate
-    conditions:
-      - check-success=all
+    merge_conditions:
+      - check-success=build
+      - check-success=test-migrations
