--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,6 +5,7 @@ pull_request_rules:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
+      - check-success~=^Vercel
     actions:
       queue:
         name: default
@@ -15,6 +16,7 @@ pull_request_rules:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
+      - check-success~=^Vercel
     actions:
       queue:
         name: hotfix
@@ -25,6 +27,7 @@ pull_request_rules:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
+      - check-success~=^Vercel
     actions:
       queue:
         name: renovate
@@ -35,14 +38,17 @@ queue_rules:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
+      - check-success~=^Vercel
       - '#approved-reviews-by>=1'
   - name: hotfix
     merge_conditions:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
+      - check-success~=^Vercel
   - name: renovate
     merge_conditions:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
+      - check-success~=^Vercel
