--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,4 +1,10 @@
 pull_request_rules:
+  - name: Label renovate PRs
+    conditions:
+      - author=renovate[bot]
+    actions:
+      label:
+        add: ['dependency']
   - name: Automatic merge on approval
     conditions:
       - '#approved-reviews-by>=1'
@@ -18,6 +24,8 @@ pull_request_rules:
       - check-success=vitest
       - check-success~=^Vercel
     actions:
+      review:
+        type: APPROVE
       queue:
         name: hotfix
         method: squash
@@ -29,6 +37,8 @@ pull_request_rules:
       - check-success=vitest
       - check-success~=^Vercel
     actions:
+      review:
+        type: APPROVE
       queue:
         name: renovate
         method: squash
@@ -46,9 +56,11 @@ queue_rules:
       - check-success=test-migrations
       - check-success=vitest
       - check-success~=^Vercel
+      - '#approved-reviews-by>=1'
   - name: renovate
     merge_conditions:
       - check-success=build
       - check-success=test-migrations
       - check-success=vitest
       - check-success~=^Vercel
+      - '#approved-reviews-by>=1'
