--- a/package.json
+++ b/package.json
@@ -142,7 +142,8 @@
     "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "18.0.26",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
     "@types/unist": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
