--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-email/img": "0.0.5",
     "@react-email/link": "0.0.5",
     "@react-email/preview": "0.0.6",
+    "@react-email/render": "^0.0.9",
     "@react-email/section": "0.0.9",
     "@react-email/tailwind": "0.0.9",
     "@react-email/text": "0.0.5",
@@ -70,6 +71,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "crypto-js": "^4.1.1",
+    "date-fns": "^2.30.0",
     "emittery": "^1.0.1",
     "encoding": "^0.1.13",
     "events": "^3.3.0",
@@ -80,7 +82,7 @@
     "hastscript": "^8.0.0",
     "lucide-react": "^0.279.0",
     "moment": "^2.29.4",
-    "next": "^13.5.6-canary.1",
+    "next": "^14.0.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -90,10 +92,10 @@
     "posthog-node": "^3.1.1",
     "prism-react-renderer": "^2.0.4",
     "qs": "^6.11.2",
-    "react": "^18.3.0-canary-67cc9ba87-20231016",
+    "react": "^18.3.0-canary-8039e6d0b-20231026",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.0.0",
-    "react-dom": "^18.3.0-canary-67cc9ba87-20231016",
+    "react-dom": "^18.3.0-canary-8039e6d0b-20231026",
     "react-dropzone": "^14.2.3",
     "react-email": "1.9.5",
     "react-ga4": "^2.1.0",
@@ -146,8 +148,8 @@
     "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "@types/unist": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -158,8 +160,9 @@
     "eslint-config-esnext": "^4.1.0",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^22.0.0",
     "postcss": "^8.4.20",
     "prettier": "^3.0.0",
