admin panel improvements

--- a/package.json
+++ b/package.json
@@ -22,23 +22,10 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.2",
-    "@react-email/button": "0.0.10",
-    "@react-email/column": "0.0.7",
-    "@react-email/components": "^0.0.7",
-    "@react-email/container": "0.0.8",
-    "@react-email/font": "0.0.3",
-    "@react-email/head": "^0.0.5",
-    "@react-email/heading": "0.0.9",
-    "@react-email/hr": "0.0.5",
-    "@react-email/html": "0.0.4",
-    "@react-email/img": "0.0.5",
-    "@react-email/link": "0.0.5",
-    "@react-email/preview": "0.0.6",
-    "@react-email/render": "^0.0.9",
-    "@react-email/section": "0.0.9",
-    "@react-email/tailwind": "0.0.9",
-    "@react-email/text": "0.0.5",
+    "@react-email/components": "^0.0.11-canary.0",
+    "@react-email/render": "^0.0.9-canary.2",
     "@sentry/nextjs": "^7.59.3",
     "@stripe/stripe-js": "^2.0.0",
     "@supabase/auth-helpers-nextjs": "^0.8.0",
@@ -82,7 +69,7 @@
     "hastscript": "^8.0.0",
     "lucide-react": "^0.279.0",
     "moment": "^2.29.4",
-    "next": "^14.0.0",
+    "next": "^14.0.2-canary.18",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -178,6 +165,7 @@
   },
   "resolutions": {
     "react-dom": "18.3.0-canary-67cc9ba87-20231016",
-    "react": "18.3.0-canary-67cc9ba87-20231016"
+    "react": "18.3.0-canary-67cc9ba87-20231016",
+    "@react-email/render": "^0.0.9-canary.2"
   }
 }
