--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "lodash.uniqby": "^4.7.0",
     "lucide-react": "^0.279.0",
     "moment": "^2.29.4",
-    "next": "14.0.3-canary.6",
+    "next": "^14.0.3",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
