--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,9 @@
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/app/(external-pages)/docs/page.mdx"
+    "e2e/**/*.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
