--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "form-data": "^4.0.0",
     "formidable": "^3.5.0",
     "framer-motion": "^10.0.0",
+    "geist": "^1.1.0",
     "hast-util-select": "^6.0.0",
     "hastscript": "^8.0.0",
     "lodash": "^4.17.21",
