--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "lodash.uniqby": "^4.7.0",
     "lucide-react": "^0.279.0",
     "moment": "^2.29.4",
-    "next": "^14.0.3",
+    "next": "^14.0.4-canary.5",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
