--- a/.env.local.example
+++ b/.env.local.example
@@ -1,19 +1,21 @@
+# supabase
 SUPABASE_PROJECT_REF=SUPABASE_PROJECT_REF
 NEXT_PUBLIC_SUPABASE_URL=NEXT_PUBLIC_SUPABASE_URL
 NEXT_PUBLIC_SUPABASE_ANON_KEY=NEXT_PUBLIC_SUPABASE_ANON_KEY
-STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 SUPABASE_SERVICE_ROLE_KEY=SUPABASE_SERVICE_ROLE_KEY
 SUPABASE_JWT_SECRET=SUPABASE_JWT_SECRET
-AWS_ACCESS_KEY_VALUE=AWS_ACCESS_KEY_VALUE
-AWS_SECRET_KEY_VALUE=AWS_SECRET_KEY_VALUE
-SENDGRID_API_KEY=SENDGRID_API_KEY
-ADMIN_EMAIL=ADMIN_EMAIL
-NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
+# stripe
+STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY
 STRIPE_WEBHOOK_SECRET=STRIPE_WEBHOOK_SECRET
 STRIPE_WEBHOOK_SECRET_LIVE=STRIPE_WEBHOOK_SECRET_LIVE
+# host
+NEXT_PUBLIC_SITE_URL=NEXT_PUBLIC_SITE_URL
+# email
+ADMIN_EMAIL=ADMIN_EMAIL
+RESEND_API_KEY=RESEND_API_KEY
+# analytics
 NEXT_PUBLIC_POSTHOG_API_KEY=NEXT_PUBLIC_POSTHOG_API_KEY
 NEXT_PUBLIC_POSTHOG_APP_ID=NEXT_PUBLIC_POSTHOG_APP_ID
 NEXT_PUBLIC_POSTHOG_HOST=NEXT_PUBLIC_POSTHOG_HOST
 NEXT_PUBLIC_GA_ID=NEXT_PUBLIC_GA_ID
-RESEND_API_KEY=RESEND_API_KEY
