internal blog updates

--- a/.unimportedrc.json
+++ b/.unimportedrc.json
@@ -13,7 +13,10 @@
   ],
   "entry": [
     "./src/pages/**/*.{js,jsx,ts,tsx}",
-    "./src/app/**/{route,layout,page,loading,error,not-found,default}.{js,jsx,ts,tsx}"
+    "./src/app/**/{route,layout,page,loading,error,not-found,default}.{js,jsx,ts,tsx}",
+    "src/middleware.{js,jsx,ts,tsx}",
+    "next.config.{js,jsx,ts,tsx,mjs}",
+    "src/mdx-components/**/*.{js,jsx,ts,tsx}"
   ],
   "ignoreUnimported": [],
   "ignoreUnused": ["next", "react", "react-dom"],
