--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
+    "strip-ansi": "^7.1.0",
     "supabase": "^1.53.0",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.0.0",
@@ -171,7 +172,10 @@
     "vitest": "^0.34.0"
   },
   "resolutions": {
-    "@react-email/render": "^0.0.10"
+    "@react-email/render": "^0.0.10",
+    "strip-ansi": "6.0.1",
+    "string-width": "4.2.2",
+    "wrap-ansi": "7.0.0"
   },
   "overrides": {
     "node-gyp-build": "4.7.1"
