--- a/.env.local.example
+++ b/.env.local.example
@@ -19,3 +19,5 @@ NEXT_PUBLIC_POSTHOG_API_KEY=NEXT_PUBLIC_POSTHOG_API_KEY
 NEXT_PUBLIC_POSTHOG_APP_ID=NEXT_PUBLIC_POSTHOG_APP_ID
 NEXT_PUBLIC_POSTHOG_HOST=NEXT_PUBLIC_POSTHOG_HOST
 NEXT_PUBLIC_GA_ID=NEXT_PUBLIC_GA_ID
+UNKEY_ROOT_KEY=UNKEY_ROOT_KEY
+UNKEY_API_ID=UNKEY_API_ID
