--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@tiptap/suggestion": "^2.0.3",
     "@tremor/react": "^3.6.5",
     "@types/mdx": "^2.0.5",
+    "@unkey/api": "^0.13.1",
+    "@unkey/nextjs": "^0.13.5",
     "@vercel/analytics": "^1.0.1",
     "ai": "^2.1.20",
     "autoprefixer": "^10.4.13",
@@ -68,11 +70,12 @@
     "geist": "^1.1.0",
     "hast-util-select": "^6.0.0",
     "hastscript": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lodash.uniqby": "^4.7.0",
     "lucide-react": "^0.294.0",
     "moment": "^2.29.4",
-    "next": "^14.0.4-canary.5",
+    "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
@@ -85,6 +88,7 @@
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-email": "1.10.0",
@@ -136,11 +140,12 @@
     "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.1",
     "@types/formidable": "^3.4.0",
-    "@types/jsonwebtoken": "^9.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.201",
     "@types/lodash.uniqby": "^4.7.9",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.2.41",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.14",
     "@types/unist": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
