--- a/.env.local.example
+++ b/.env.local.example
@@ -21,3 +21,6 @@ NEXT_PUBLIC_POSTHOG_HOST=NEXT_PUBLIC_POSTHOG_HOST
 NEXT_PUBLIC_GA_ID=NEXT_PUBLIC_GA_ID
 UNKEY_ROOT_KEY=UNKEY_ROOT_KEY
 UNKEY_API_ID=UNKEY_API_ID
+# integration tests (testmail.app)
+TESTMAIL_PREFIX=TESTMAIL_PREFIX
+TESTMAIL_API_KEY=TESTMAIL_API_KEY
