--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -2,6 +2,9 @@ name: 'CI setup'
 runs:
   using: 'composite'
   steps:
+    - name: Set environment variable
+      run: echo "GITHUB_ACTION=true" >> $GITHUB_ENV
+      shell: bash
     - name: Use Node.js 18.x
       uses: actions/setup-node@v4
       with:
