--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^8.0.0",
+    "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.31.0",
     "eslint-config-esnext": "^4.1.0",
