--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -28,9 +28,19 @@ jobs:
       - uses: ./.github/actions/ci-setup
       - name: test
         run: yarn run test
+
+  playwright:
+    timeout-minutes: 20
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/ci-setup
       - uses: supabase/setup-cli@v1
         with:
           version: latest
       - run: supabase start
+      - name: Install playwright browsers
+        run: yarn playwright install --with-deps
       - name: Run e2e tests
         run: yarn run test:e2e
