--- a/.env.test
+++ b/.env.test
@@ -14,7 +14,7 @@ STRIPE_WEBHOOK_SECRET_LIVE=STRIPE_WEBHOOK_SECRET_LIVE
 # host
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 # email
-ADMIN_EMAIL=ADMIN_EMAIL
+ADMIN_EMAIL=admin@myapp.com
 RESEND_API_KEY=RESEND_API_KEY
 # analytics
 NEXT_PUBLIC_POSTHOG_API_KEY=NEXT_PUBLIC_POSTHOG_API_KEY
@@ -23,4 +23,3 @@ NEXT_PUBLIC_POSTHOG_HOST=NEXT_PUBLIC_POSTHOG_HOST
 NEXT_PUBLIC_GA_ID=NEXT_PUBLIC_GA_ID
 UNKEY_ROOT_KEY=UNKEY_ROOT_KEY
 UNKEY_API_ID=UNKEY_API_ID
-
