--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.8",
     "nprogress": "^0.2.0",
     "p-memoize": "^7.1.1",
     "path-to-regexp": "^6.2.1",
@@ -126,7 +127,7 @@
     "start": "next start",
     "generate:types:local": "export $(cat .env.local | xargs) &&  supabase gen types typescript --project-id ${SUPABASE_PROJECT_REF} --schema public > src/lib/database.types.ts",
     "build": "next build",
-    "test:e2e": "playwright test",
+    "test:e2e": "cross-env NODE_ENV=test playwright test",
     "test": "vitest --root src",
     "lint:eslint": "yarn eslint --fix src",
     "lint:prettier": "prettier --write src",
@@ -143,6 +144,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.201",
     "@types/lodash.uniqby": "^4.7.9",
+    "@types/nodemailer": "^6.4.14",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.2.41",
     "@types/react-copy-to-clipboard": "^5.0.7",
@@ -152,6 +154,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^8.0.0",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "eslint": "^8.31.0",
