--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "path-to-regexp": "^6.2.1",
     "posthog-js": "^1.75.3",
     "posthog-node": "^3.1.1",
-    "prism-react-renderer": "^2.0.4",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
@@ -99,6 +98,7 @@
     "react-no-ssr": "^1.1.0",
     "react-select": "^5.7.3",
     "react-tooltip": "^5.4.0",
+    "rehype-pretty-code": "^0.12.4",
     "rehype-toc": "^3.0.2",
     "remark-frontmatter": "^5.0.0",
     "remark-mdx-frontmatter": "^4.0.0",
@@ -106,6 +106,7 @@
     "rooks": "^7.14.0",
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.4.0",
+    "shikiji": "^0.10.0-beta.4",
     "slugify": "^1.6.6",
     "sonner": "^1.0.0",
     "stripe": "^14.10.0",
