--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "lodash.uniqby": "^4.7.0",
     "lucide-react": "^0.323.0",
     "moment": "^2.29.4",
-    "next": "^14.0.5-canary.58",
+    "next": "^14.1.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.8",
