--- a/.github/workflows/sync-internal.yml
+++ b/.github/workflows/sync-internal.yml
@@ -15,19 +15,18 @@ jobs:
         run: |
           if [[ "${{ github.repository }}" != "imbhargav5/nextbase-ultimate" ]]; then
             echo "Workflow can only run on imbhargav5/nextbase-ultimate"
-            echo "::set-output name=should_run::true"
-            exit 0
+            echo "SHOULD_CONTINUE=false" >> $GITHUB_STATE
           else
-            echo "::set-output name=should_run::false"
+            echo "SHOULD_CONTINUE=true" >> $GITHUB_STATE
             echo "Workflow can only run on imbhargav5/nextbase-ultimate"
           fi
 
       - name: Checkout
-        if: steps.check_repo.outputs.should_run == 'true'
+        if: env.SHOULD_CONTINUE == 'true'
         uses: actions/checkout@v4
 
       - name: Sync fork
-        if: steps.check_repo.outputs.should_run == 'true'
+        if: env.SHOULD_CONTINUE == 'true'
         uses: repo-sync/github-sync@v2
         with:
           source_repo: 'https://${{secrets.NEXTBASE_SYNC_REPO_SECRET}}@github.com/usenextbase/nextbase-ultimate.git'
