--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "moment": "^2.29.4",
     "next": "^14.1.0",
     "next-mdx-remote": "^4.4.1",
+    "next-nprogress-bar": "^2.1.2",
     "next-themes": "^0.2.1",
     "nodemailer": "^6.9.8",
     "nprogress": "^0.2.0",
