Update sync-internal.yml workflow

--- a/.github/workflows/sync-internal.yml
+++ b/.github/workflows/sync-internal.yml
@@ -15,17 +15,17 @@ jobs:
         run: |
           if [[ "${{ github.repository }}" != "imbhargav5/nextbase-ultimate" ]]; then
             echo "Workflow can only run on imbhargav5/nextbase-ultimate"
-            echo "SHOULD_CONTINUE=false" >> $GITHUB_STATE
+            echo "SHOULD_CONTINUE=false" >> $GITHUB_ENV
           else
-            echo "SHOULD_CONTINUE=true" >> $GITHUB_STATE
+            echo "SHOULD_CONTINUE=true" >> $GITHUB_ENV
           fi
 
       - name: Checkout
-        if: env.STATE_SHOULD_CONTINUE == 'true'
+        if: env.SHOULD_CONTINUE == 'true'
         uses: actions/checkout@v4
 
       - name: Sync fork
-        if: env.STATE_SHOULD_CONTINUE == 'true'
+        if: env.SHOULD_CONTINUE == 'true'
         uses: repo-sync/github-sync@v2
         with:
           source_repo: 'https://${{secrets.NEXTBASE_SYNC_REPO_SECRET}}@github.com/usenextbase/nextbase-ultimate.git'
