remove sub-teams feature

--- a/package.json
+++ b/package.json
@@ -148,7 +148,8 @@
     "dev": "next dev",
     "email:dev": "email dev",
     "start": "next start",
-    "generate:types:local": "export $(cat .env.local | xargs) &&  supabase gen types typescript --project-id ${SUPABASE_PROJECT_REF} --schema public > src/lib/database.types.ts",
+    "generate:types": "supabase gen types typescript --linked --schema public > src/lib/database.types.ts",
+    "generate:types:local": "supabase gen types typescript --local > src/lib/database.types.ts",
     "build": "next build",
     "test:e2e": "cross-env NODE_ENV=test playwright test",
     "test": "vitest --root src",
@@ -197,7 +198,7 @@
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
     "strip-ansi": "^7.1.0",
-    "supabase": "^1.127.4",
+    "supabase": "^1.149.1",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.0.0",
     "unimported": "^1.31.1",
