--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "rooks": "^7.14.0",
     "server-only": "^0.0.1",
     "shadcn-ui": "^0.8.0",
+    "sharp": "^0.33.2",
     "shikiji": "^0.10.0-beta.4",
     "slugify": "^1.6.6",
     "sonner": "^1.4.0",
@@ -183,7 +184,6 @@
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^24.0.0",
