--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -1,14 +1,15 @@
 name: 'CI setup'
+description: 'Setup CI environment for the project'
 runs:
   using: 'composite'
   steps:
     - name: Set environment variable
       run: echo "GITHUB_ACTION=true" >> $GITHUB_ENV
       shell: bash
-    - name: Use Node.js 18.x
+    - name: Use Node.js 20.x
       uses: actions/setup-node@v4
       with:
-        node-version: 18.x
+        node-version: 20.x
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn cache dir)"
