--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "2.0.0-0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
