--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -10,18 +10,19 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: 20.x
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+        cache: 'pnpm' # Updated to use pnpm for caching
+    - name: Get pnpm cache directory path
+      id: pnpm-cache-dir-path
+      run: echo "::set-output name=dir::$(pnpm cache dir)"
       shell: bash
     - uses: actions/cache@v4
-      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      id: pnpm-cache # Updated to pnpm-cache
       with:
         path: |
           node_modules
           */*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+        key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }} # Updated to pnpm-lock.yaml
     - name: Install project dependencies
-      if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
-      run: yarn
+      if: steps.pnpm-cache.outputs.cache-hit != 'true'
+      run: pnpm install # Updated to pnpm
       shell: bash
