--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,17 +8,6 @@ on:
       - '**'
 
 jobs:
-  # build:
-  #   timeout-minutes: 20
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: ./.github/actions/ci-setup
-  #     - name: ts-check && build
-  #       run: yarn run tsc
-
   vitest:
     timeout-minutes: 20
 
@@ -27,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/ci-setup
       - name: test
-        run: yarn run test
+        run: pnpm run test
 
   playwright:
     timeout-minutes: 20
@@ -41,6 +30,6 @@ jobs:
           version: latest
       - run: supabase start
       - name: Install playwright browsers
-        run: yarn playwright install --with-deps
+        run: pnpm run playwright install --with-deps
       - name: Run e2e tests
-        run: yarn run test:e2e
+        run: pnpm run test:e2e
