feat/register organization flow (#79)
* feat: register flow with organization creation

* fix: e2e tests, and user onboarding flow

* fix: remove tailwind typo

* fix: organization policy migration

* feat: login/signup designs with tabs

* fix: bg-color in terms of conditions

* fix: e2e tests fixed

* fix: hydration error <p> inside <p>

* Remove unused policies and update code in UserOnboardingFlow and CreateOrganizationForm

* Update Node.js and pnpm setup

* Refactor code to improve performance and readability

* Update ESLint configuration and remove unused code

* Update playwright installation command

---------

Co-authored-by: Bhargav Ponnapalli <imbhargav5@gmail.com>

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -6,22 +6,29 @@ runs:
     - name: Set environment variable
       run: echo "GITHUB_ACTION=true" >> $GITHUB_ENV
       shell: bash
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v4
+    - name: Install Node.js
+      uses: actions/setup-node@v3
       with:
-        node-version: 20.x
-        cache: 'pnpm' # Updated to use pnpm for caching
-    - name: Get pnpm cache directory path
-      id: pnpm-cache-dir-path
-      run: echo "::set-output name=dir::$(pnpm cache dir)"
+        node-version: 20
+
+    - uses: pnpm/action-setup@v3
+      name: Install pnpm
+      with:
+        version: 8
+        run_install: false
+
+    - name: Get pnpm store directory
       shell: bash
-    - uses: actions/cache@v4
-      id: pnpm-cache # Updated to pnpm-cache
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - uses: actions/cache@v3
+      name: Setup pnpm cache
       with:
-        path: |
-          node_modules
-          */*/node_modules
-        key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }} # Updated to pnpm-lock.yaml
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
     - name: Install project dependencies
       if: steps.pnpm-cache.outputs.cache-hit != 'true'
       run: pnpm install # Updated to pnpm
