--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "unist-util-visit": "^5.0.0",
     "url-join": "^5.0.0",
     "use-debounce": "^10.0.0",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "vaul": "^0.9.0",
     "web-vitals": "^3.4.0",
     "zod": "^3.22.4"
@@ -176,6 +176,7 @@
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.2.14",
     "@types/unist": "^3.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-react": "^4.0.0",
