Account deletion UI + Update configuration and dependencies, add inbucket settings, and refactor email sending

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "geist": "^1.1.0",
     "hast-util-select": "^6.0.0",
     "hastscript": "^9.0.0",
+    "inbucket-js-client": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lodash.uniqby": "^4.7.0",
@@ -198,7 +199,7 @@
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
     "strip-ansi": "^7.1.0",
-    "supabase": "^1.149.1",
+    "supabase": "^1.150.0",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.0.0",
     "unimported": "^1.31.1",
