--- a/package.json
+++ b/package.json
@@ -164,13 +164,14 @@
   "devDependencies": {
     "@microflash/rehype-slugify": "^1.0.0",
     "@next/eslint-plugin-next": "^14.0.0",
-    "@playwright/test": "^1.29.1",
+    "@playwright/test": "^1.42.1",
     "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.1",
     "@types/formidable": "^3.4.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.201",
     "@types/lodash.uniqby": "^4.7.9",
+    "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
     "@types/nprogress": "^0.2.0",
     "@types/react": "18.2.60",
