--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "generate:types:local": "supabase gen types typescript --local > src/lib/database.types.ts",
     "build": "next build",
     "test:e2e": "cross-env NODE_ENV=test playwright test",
+    "test:e2e:ui": "cross-env NODE_ENV=test playwright test --ui",
     "test": "vitest --root src",
     "lint:eslint": "pnpm eslint --fix src",
     "lint:prettier": "prettier --write src",
